# mlflow-shap

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/mlflow_shap/: __init__.py  exceptions.py  explainer.py
tests/: conftest.py  test_explainer.py
