[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlflow-shap"
version = "0.1.0"
description = "Log and load SHAP explainers as MLflow artifacts with a one-liner."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Pongsakorn", email = "prince.pongsakorn@outlook.com" },
]
keywords = ["mlflow", "shap", "xai", "explainable-ai", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mlflow>=2.0",
    "shap>=0.42",
    "joblib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "scikit-learn>=1.2",
    "numpy>=1.23",
    "build>=1.0",
    "twine>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/princepongsakorn/mlflow-shap"
Repository = "https://github.com/princepongsakorn/mlflow-shap"
Issues = "https://github.com/princepongsakorn/mlflow-shap/issues"
Changelog = "https://github.com/princepongsakorn/mlflow-shap/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mlflow_shap = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
